--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,10 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_gravity="center"
     tools:context=".ProfileActivity">
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+<!--  <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--      android:id="@+id/edit_profileFAB"-->
+<!--      android:layout_width="wrap_content"-->
+<!--      android:layout_height="wrap_content"-->
+<!--      android:layout_marginStart="350dp"-->
+<!--      android:layout_marginTop="40dp"-->
+<!--      android:clickable="true"-->
+<!--      android:contentDescription="TODO"-->
+<!--      app:backgroundTint="#FFFFFF"-->
+<!--      app:fabCustomSize="30dp"-->
+<!--      app:fabSize="mini"-->
+<!--      app:maxImageSize="18dp"-->
+<!--      app:srcCompat="@drawable/profile_edit"/>-->
+
+<!--  <TextView-->
+<!--      android:layout_width="wrap_content"-->
+<!--      android:layout_height="match_parent"-->
+<!--      android:text="Profile"-->
+<!--      android:layout_marginVertical="350dp"-->
+<!--      android:layout_centerInParent="true"/>-->
+
+  <ScrollView
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+      <androidx.constraintlayout.widget.ConstraintLayout
+          android:layout_width="match_parent"
+          android:layout_height="335dp"
+          android:background="@drawable/top_background_gradient">
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
+
+  </ScrollView>
+
+  
+  <ScrollView
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:gravity="center"
+          android:orientation="vertical"
+          tools:ignore="MissingConstraints">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+          <LinearLayout
+              android:layout_width="match_parent"
+              android:layout_height="?actionBarSize"
+              android:orientation="horizontal"
+              android:gravity="center"
+              android:padding="8dp">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+              <ImageView
+                  android:layout_width="40dp"
+                  android:layout_height="40dp"
+                  android:padding="5dp"
+                  android:layout_alignParentStart="true"
+                  android:src="@drawable/ic_arrow_back"/>
+              <TextView
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_centerHorizontal="true"
+                  android:layout_centerVertical="true"
+                  android:text="Profile"
+                  android:textStyle="bold|normal"
+                  android:textColor="@color/white"
+                  android:textSize="18sp"/>
+            </RelativeLayout>
+
+          </LinearLayout>
+
+        </LinearLayout>
+
+        <include layout="@layout/item_image"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/edit_profileBtn"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_round_1"
+            android:text="Edit Profile"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textAllCaps="false"
+            android:layout_marginTop="45dp"/>
+
+        <include layout="@layout/item_email"/>
+        <include layout="@layout/item_phone"/>
+        <include layout="@layout/item_address"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+          <LinearLayout
+              android:layout_width="match_parent"
+              android:layout_height="202dp"
+              android:orientation="vertical"
+              android:gravity="center"
+              android:padding="10dp">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/sign_outBtn"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_round_2"
+                android:text="Sign Out"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:layout_marginBottom="20dp"/>
+          </LinearLayout>
+
+        </LinearLayout>
+
+      </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+  </ScrollView>
+
+</RelativeLayout>
