--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -75,6 +75,7 @@
             android:gravity="center">
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/createNewCV"
                 android:layout_width="380dp"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="20dp"
@@ -91,7 +92,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="New"
+                        android:text="Create New"
                         android:textStyle="bold"
                         android:textSize="25sp"
                         android:textColor="@color/white"
@@ -120,7 +121,7 @@
             android:gravity="center">
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/history_CV"
+                android:id="@+id/shTraceabilityCV"
                 android:layout_width="380dp"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="20dp"
@@ -138,7 +139,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="History"
+                        android:text="Shallot Traceability"
                         android:textStyle="bold"
                         android:textSize="25sp"
                         android:textColor="@color/white"
@@ -173,7 +174,8 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             app:cardCornerRadius="50dp"
-            app:cardElevation="5dp">
+            app:cardElevation="5dp"
+            android:clickable="true">
 
             <ImageView
                 android:layout_width="80dp"
