--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,16 +2,17 @@
     <!-- Base application theme. -->
     <style name="Theme.LoginAndSignUpFirebase" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/salem_1</item>
+        <item name="colorPrimaryVariant">@color/salem_2</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/purple_1</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/salem_1</item>
         <!-- Customize your theme here. -->
+        <item name="colorControlActivated">@color/salem_1</item>
     </style>
     //add
     <style name="Circular">
