--- a/app/src/main/res/layout/activity_new_traceability.xml
+++ b/app/src/main/res/layout/activity_new_traceability.xml
@@ -76,7 +76,7 @@
             app:hintTextColor="@color/salem_1"
             android:layout_marginStart="12dp"
             android:layout_marginEnd="12dp"
-            android:hint="Product Weight (Kg)"
+            android:hint="Product Weight (gram)"
             app:errorEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -96,6 +96,6 @@
             android:layout_marginEnd="12dp"
             android:padding="12dp"
             android:background="@color/salem_1"
-            android:textColor="@android:color/white"/>
+            android:textColor="@android:color/white" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
