--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -108,10 +108,12 @@
             android:layout_height="wrap_content"
             android:background="@drawable/btn_round_1"
             android:text="Edit Profile"
+            android:textSize="16sp"
             android:textColor="@color/white"
             android:textStyle="bold"
             android:textAllCaps="false"
-            android:layout_marginTop="45dp"/>
+            android:layout_marginTop="45dp"
+            android:clickable="true"/>
 
         <include layout="@layout/item_email"/>
         <include layout="@layout/item_phone"/>
@@ -138,6 +140,7 @@
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textStyle="bold"
+                android:textSize="16sp"
                 android:layout_marginBottom="20dp"/>
           </LinearLayout>
 
