--- a/app/src/main/res/layout/activity_new_traceability.xml
+++ b/app/src/main/res/layout/activity_new_traceability.xml
@@ -11,9 +11,11 @@
         android:layout_width="34dp"
         android:layout_height="34dp"
         android:layout_margin="12dp"
-        android:background="@drawable/bg_close"
+        android:src="@drawable/ic_close"
+        android:background="?attr/selectableItemBackgroundBorderless"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:clickable="true"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
