--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -80,11 +80,13 @@
                 android:layout_height="match_parent">
               <ImageView
                   android:id="@+id/back_profileIV"
-                  android:layout_width="40dp"
-                  android:layout_height="40dp"
+                  android:layout_width="35dp"
+                  android:layout_height="35dp"
                   android:padding="5dp"
                   android:layout_alignParentStart="true"
-                  android:background="@drawable/bg_back"/>
+                  android:src="@drawable/ic_back"
+                  android:background="?attr/selectableItemBackgroundBorderless"
+                  android:layout_centerVertical="true"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
