--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,9 +10,10 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/salem_1</item>
+        <item name="android:statusBarColor"
+            tools:targetApi="l">@color/black</item>
         <!-- Customize your theme here. -->
-        <item name="colorControlActivated">@color/salem_1</item>
+        <item name="colorControlActivated">@color/grey_mid</item>
     </style>
     //add
     <style name="Circular">
@@ -33,5 +34,10 @@
         <item name="android:maxLines">1</item>
         <item name="android:textSize">14sp</item>
         <item name="android:singleLine">true</item>
+    </style>
+    
+    <style name="roundImageViewRounded">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
     </style>
 </resources>
