Generate and Scan QR Code feature successfully added to application ShobisApp. But don't have override data

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -173,6 +173,7 @@
         android:gravity="center">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/scanCV"
             android:layout_width="100dp"
             android:layout_height="100dp"
             app:cardCornerRadius="50dp"
