--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -49,7 +49,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
-        android:id="@+id/imageDetail"
+        android:id="@+id/qrCodeDetail"
         android:layout_width="170dp"
         android:layout_height="170dp"
         android:src="@drawable/ic_empty_photos"
@@ -71,7 +71,7 @@
         android:id="@+id/varietyDetail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Farmer"
+        android:text="Variety"
         android:textSize="18sp"
         android:layout_marginTop="10dp"
         android:padding="20dp"
@@ -80,7 +80,7 @@
         android:id="@+id/weightDetail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Farmer"
+        android:text="Weight"
         android:textSize="18sp"
         android:layout_marginTop="10dp"
         android:padding="20dp"
