--- a/app/src/main/res/layout/activity_new_traceability.xml
+++ b/app/src/main/res/layout/activity_new_traceability.xml
@@ -16,6 +16,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:clickable="true"/>
+
+    <ImageView
+        android:id="@+id/qrCodeIV"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/ic_empty_photos"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintTop_toBottomOf="@id/closeBtn"
+        tools:ignore="MissingConstraints"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -89,6 +102,18 @@
                 android:drawablePadding="12dp"
                 android:inputType="numberDecimal|numberSigned"/>
         </com.google.android.material.textfield.TextInputLayout>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/generateTraceabilityBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Generate QR Code"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginBottom="20dp"
+            android:padding="12dp"
+            android:background="@color/salem_1"
+            android:textColor="@android:color/white" />
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/createTraceabilityBtn"
             android:layout_width="match_parent"
