--- a/app/src/main/res/layout/activity_traceability_list.xml
+++ b/app/src/main/res/layout/activity_traceability_list.xml
@@ -7,10 +7,24 @@
     android:layout_height="match_parent"
     tools:context=".TraceabilityListActivity">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/salem_2"
+        android:id="@+id/addFAB"
+        android:src="@drawable/ic_add"
+        app:fabSize="auto"
+        app:tint="@color/white"
+        app:borderWidth="0dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="40dp"
+        android:contentDescription="TODO" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/header_bg_gradient">
 
         <LinearLayout
@@ -48,7 +62,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listTraceabilityRV"
+        android:id="@+id/listTraceRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/header"
