Fix layout XML sign in, sign up, dashboard/home, and profile

--- a/app/src/main/res/layout/activity_new_traceability.xml
+++ b/app/src/main/res/layout/activity_new_traceability.xml
@@ -15,7 +15,8 @@
         android:background="?attr/selectableItemBackgroundBorderless"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:clickable="true"/>
+        android:focusable="true"
+        android:contentDescription="TODO" />
 
     <ImageView
         android:id="@+id/qrCodeIV"
