--- a/app/src/main/res/drawable/top_background_gradient.xml
+++ b/app/src/main/res/drawable/top_background_gradient.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:bottomLeftRadius="70dp" android:bottomRightRadius="70dp"/>
-            <gradient android:startColor="#FF0082" android:endColor="#8F257B"/>
+            <gradient android:startColor="@color/salem_1" android:endColor="@color/salem_2"/>
         </shape>
     </item>
 
