--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,161 +6,205 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/dashboard_screen"
     tools:context=".HomeActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Dashboard"
-            android:textStyle="bold"
-            android:layout_marginTop="5dp"/>
-
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/profile_SIV"
-            android:contentDescription="TODO"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="50dp"
-            android:background="#d9d9d9"
-            android:src="@drawable/profile_person"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/circular"
-            android:clickable="true"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Admin"
-            android:textStyle="normal"
-            android:textSize="16sp"
-            android:textAllCaps="true"
-            android:padding="10dp"/>
-
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:padding="5dp"
-            android:layout_marginTop="10dp"
-            android:gravity="center">
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="60dp">
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/profile_SIV"
+                android:contentDescription="TODO"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:layout_centerVertical="true"
+                android:background="#d9d9d9"
+                android:src="@drawable/profile_person"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:shapeAppearanceOverlay="@style/circular"
+                android:clickable="true"/>
 
             <ImageView
                 android:id="@+id/logo_text_IV"
-                android:layout_width="200dp"
-                android:layout_height="50dp"
+                android:layout_width="150dp"
+                android:layout_height="40dp"
+                android:layout_alignParentEnd="true"
                 android:src="@drawable/lg_shobisapp_text"
                 android:layout_marginTop="40dp"/>
 
-            <ImageView
-                android:layout_width="70dp"
-                android:layout_height="130dp"
-                android:src="@drawable/lg_shobisapp"
-                android:layout_toRightOf="@+id/logo_text_IV"
-                android:layout_marginLeft="20dp"/>
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="30dp"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hello, "
+                android:textStyle="normal"
+                android:textSize="28sp"
+                android:textAllCaps="false"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Name "
+                android:textStyle="bold|normal"
+                android:textSize="28sp"
+                android:textAllCaps="false"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="! "
+                android:textStyle="bold|normal"
+                android:textSize="28sp"
+                android:textAllCaps="false"/>
 
         </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="10dp"
+            android:text="Welcome back"
+            android:textStyle="normal"
+            android:textSize="17sp"
+            android:textAllCaps="false"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:gravity="center">
+            android:layout_marginTop="70dp"
+            android:layout_marginBottom="10dp">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/createNewCV"
-                android:layout_width="380dp"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="20dp"
-                app:cardElevation="5dp"
-                app:cardBackgroundColor="@color/purple_2"
-                app:cardUseCompatPadding="true"
-                android:foreground="?attr/selectableItemBackground">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="20dp"
+                android:orientation="vertical"
+                android:gravity="center">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_marginTop="10dp">
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/createNewCV"
+                    android:layout_width="370dp"
+                    android:layout_height="170dp"
+                    app:cardCornerRadius="20dp"
+                    app:cardElevation="5dp"
+                    app:cardBackgroundColor="@color/salem_1"
+                    app:cardUseCompatPadding="true"
+                    android:clickable="true"
+                    android:foreground="?attr/selectableItemBackground">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Create New"
-                        android:textStyle="bold"
-                        android:textSize="25sp"
-                        android:textColor="@color/white"
-                        android:layout_marginLeft="15dp"/>
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
 
-                    <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:src="@drawable/ic_new"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="20dp"
-                        android:layout_marginBottom="10dp"
-                        android:alpha="0.65"/>
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_centerVertical="true"
+                            android:background="@drawable/cv_create"
+                            android:layout_alignParentRight="true"/>
 
-                </RelativeLayout>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Create New"
+                            android:layout_marginTop="20dp"
+                            android:textStyle="bold"
+                            android:textSize="25sp"
+                            android:textColor="@color/white"
+                            android:layout_marginLeft="15dp"/>
 
-            </androidx.cardview.widget.CardView>
+                        <ImageView
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:layout_centerVertical="true"
+                            android:src="@drawable/ic_new"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginRight="20dp"
+                            android:layout_marginBottom="10dp"/>
 
-        </LinearLayout>
+                    </RelativeLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_marginTop="0dp"
-            android:gravity="center">
+                </androidx.cardview.widget.CardView>
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/shTraceabilityCV"
-                android:layout_width="380dp"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="20dp"
-                app:cardElevation="5dp"
-                app:cardBackgroundColor="@color/purple_2"
-                app:cardUseCompatPadding="true"
-                android:clickable="true"
-                android:foreground="?attr/selectableItemBackground">
+            </LinearLayout>
 
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginTop="10dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="20dp"
+                android:orientation="vertical"
+                android:gravity="center">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Shallot Traceability"
-                        android:textStyle="bold"
-                        android:textSize="25sp"
-                        android:textColor="@color/white"
-                        android:layout_marginLeft="15dp"
-                        android:clickable="false"/>
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/shTraceabilityCV"
+                    android:layout_width="370dp"
+                    android:layout_height="170dp"
+                    app:cardCornerRadius="20dp"
+                    app:cardElevation="5dp"
+                    android:hapticFeedbackEnabled="true"
+                    app:cardBackgroundColor="@color/salem_1"
+                    app:cardUseCompatPadding="true"
+                    android:clickable="true"
+                    android:foreground="?attr/selectableItemBackground">
 
-                    <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:src="@drawable/ic_history"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="20dp"
-                        android:layout_marginBottom="10dp"
-                        android:alpha="0.65"
-                        android:clickable="false"/>
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
 
-                </RelativeLayout>
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_centerVertical="true"
+                            android:background="@drawable/cv_listtraceability"
+                            android:layout_alignParentRight="true"/>
 
-            </androidx.cardview.widget.CardView>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Shallot Traceability"
+                            android:layout_marginTop="20dp"
+                            android:textStyle="bold"
+                            android:textSize="25sp"
+                            android:textColor="@color/white"
+                            android:layout_marginLeft="15dp"
+                            android:clickable="false"/>
+
+                        <ImageView
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:layout_centerVertical="true"
+                            android:src="@drawable/ic_history"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginRight="20dp"
+                            android:layout_marginBottom="10dp"
+                            android:clickable="false"/>
+
+                    </RelativeLayout>
+
+                </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -170,19 +214,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="bottom|center">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/scanCV"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            app:cardCornerRadius="50dp"
-            app:cardElevation="5dp"
-            android:clickable="true">
+            android:layout_width="115dp"
+            android:layout_height="115dp"
+            app:cardCornerRadius="80dp"
+            app:cardElevation="8dp"
+            android:clickable="true"
+            android:layout_marginBottom="50dp">
 
             <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:src="@drawable/ic_qrscanner"
                 android:layout_gravity="center"/>
         </androidx.cardview.widget.CardView>
