--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,8 +10,9 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor"
-            tools:targetApi="l">@color/black</item>
+        <item name="android:statusBarColor">?attr/colorOnPrimary</item>
+        <item name="android:windowLightStatusBar" tools:targetApi = "23">true</item>
+        <item name="android:windowTranslucentStatus">false</item>
         <!-- Customize your theme here. -->
         <item name="colorControlActivated">@color/grey_mid</item>
     </style>
